# table-function-visualizer

./: DEPLOYMENT.md  README.md  SETUP.md  package-lock.json
apps/web/: .eslintrc.cjs  index.html  package-lock.json  package.json  start.sh  vite.config.ts
apps/web/.github/workflows/: deploy.yml
apps/web/public/: sw.js
apps/web/src/: App.css  App.tsx  index.css  main.tsx
apps/web/src/components/: CodeEditor.tsx  DataTransformation.css  DataTransformation.test.ts  DataTransformation.tsx  ExamplesGallery.css  ExamplesGallery.tsx  JupyterNotebook.css  JupyterNotebook.tsx  NotebookCell.css  NotebookCell.tsx  NotebookCells.css  NotebookCells.tsx  OutputPanel.tsx  StepSlideshow.css  StepSlideshow.tsx  TablePreview.tsx  TracePanel.tsx  TraceStep.tsx  TraceTimeline.tsx
apps/web/src/lib/: displaySteps.ts  examples.ts  frames.test.ts  frames.ts  inline_tracer.py  pyodide.ts  tracer.py
examples/: basics.py  group_join.py
py/table_tracer/: README.md  pyproject.toml
py/table_tracer/table_tracer/: __init__.py  tracer.py
scripts/: build_wheels.sh
