[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "table_tracer"
version = "0.1.0"
description = "Instrumentation layer for datascience.Table operations"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "DataScience Table Tutor", email = "datascience-tutor@example.com"}
]
keywords = ["datascience", "table", "visualization", "education"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=22.0",
]

[tool.setuptools]
packages = ["table_tracer"]

[tool.setuptools.package-data]
table_tracer = ["py.typed"]

